[package]
name = "entangled-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Terminal content viewer for Entangled v1.0: renders a verified document's scene IR. Not a conforming client (no trust/canary chrome yet)."
repository = "https://github.com/samjanny/entangled-tui"
homepage = "https://github.com/samjanny/entangled"
readme = "README.md"
keywords = ["entangled", "tui", "ratatui", "viewer", "rendering"]
categories = ["command-line-utilities", "rendering"]

# The crate is split: `lib` holds the pure, testable layout/state logic (Scene
# -> wrapped lines, scroll/viewport, link list) with no terminal I/O; the `tui`
# binary is the thin event-loop/draw shell over crossterm + ratatui.
[lib]
name = "entangled_tui"
path = "src/lib.rs"

[[bin]]
name = "entangled-tui"
path = "src/main.rs"

[dependencies]
entangled-core = { path = "../entangled-api/entangled-core" }
entangled-engine = { path = "../entangled-engine" }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
